# Whelp-Python-Task

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml
_dev/: docker-compose.yml
app/: config.py  db.py  main.py  routers.py
celery_tasks/: app.py  tasks.py
core/: api.py  deps.py  models.py  schemas.py  usecases.py
core/test/: test_api.py
nginx/: Dockerfile  nginx.conf
